# tarmar-rules

./: README.md  pyproject.toml
.github/workflows/: ci.yml  tag-version-guard.yml
tarmar_rules/: __init__.py  combat.py
tests/: test_combat.py
