[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tarmar-rules"
version = "0.2.1"
description = "Tarmar d20 combat-resolution core (weapon-vs-armour matrix, modifiers, crit, Hybrid armour) shared across games."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["tarmar_rules*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
